[gd_scene load_steps=2 format=3 uid="uid://bxnumb3igwfcm"]

[ext_resource type="Script" path="res://UI/Options Menu/options_menu.gd" id="1_3mbnd"]

[node name="OptionsMenu" type="Control" groups=["Main Menu Incompatible", "Singleplayer Start Menu Incompatible"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3mbnd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.866667, 0.866667, 0.866667, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="TabContainer" type="TabContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/side_margin = 0
theme_override_font_sizes/font_size = 25
current_tab = 0
all_tabs_in_front = true

[node name="Display" type="MarginContainer" parent="MarginContainer/MarginContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Display"]
layout_mode = 2

[node name="ScreenMode" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/ScreenMode"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Screen  Mode"
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/ScreenMode"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="MaxFPS" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Max FPS"
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS"]
layout_mode = 2
size_flags_horizontal = 3
dragger_visibility = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30

[node name="HSlider" type="HSlider" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 240.0
allow_greater = true

[node name="Vsync" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/Vsync"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Vsync"
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Disabled"
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2

[node name="Audio" type="MarginContainer" parent="MarginContainer/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio"]
layout_mode = 2

[node name="AudioVolume" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Audio Volume"
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume"]
layout_mode = 2
size_flags_horizontal = 3
dragger_visibility = 1

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "%"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
allow_greater = true

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Music Volume"
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
dragger_visibility = 1

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "%"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
allow_greater = true

[node name="SFXVolume" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Audio Volume"
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
dragger_visibility = 1

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "%"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
allow_greater = true

[node name="ExitButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 25
text = "X"

[connection signal="item_selected" from="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/ScreenMode/OptionButton" to="." method="_on_screen_mode_changed"]
[connection signal="text_submitted" from="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS/HSplitContainer/LineEdit" to="." method="_on_max_fps_text_submitted"]
[connection signal="drag_ended" from="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS/HSplitContainer/HSlider" to="." method="_on_max_fps_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/MaxFPS/HSplitContainer/HSlider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/MarginContainer/TabContainer/Display/VBoxContainer/Vsync/OptionButton" to="." method="_on_vsync_mode_changed"]
[connection signal="text_submitted" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer/HSplitContainer/LineEdit" to="." method="_on_audio_volume_text_submitted"]
[connection signal="drag_ended" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer/HSlider" to="." method="_on_audio_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/AudioVolume/HSplitContainer/HSlider" to="." method="_on_audio_volume_slider_value_changed"]
[connection signal="text_submitted" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer/HSplitContainer/LineEdit" to="." method="_on_music_volume_text_submitted"]
[connection signal="drag_ended" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer/HSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSplitContainer/HSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="text_submitted" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer/HSplitContainer/LineEdit" to="." method="_on_sfx_volume_text_submitted"]
[connection signal="drag_ended" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer/HSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/TabContainer/Audio/VBoxContainer/SFXVolume/HSplitContainer/HSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ExitButton" to="." method="_on_exit_button_pressed"]
